--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
     <link rel="manifest" href="./asset/favicon/site.webmanifest" />
     <!-- Fonts -->
     <link rel="stylesheet" href="./asset/fonts/stylesheet.css">
-    <style>
-        body{
-            font-family: Gorita, sans-serif;
-        }
-    </style>
+    <!-- Styles -->
+     <link rel="stylesheet" href="./asset/css/main.css">
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id cumque libero eveniet, deserunt sapiente, atque delectus accusantium facere quia debitis nostrum ab dignissimos veniam asperiores nisi architecto? Eaque, non voluptatum.</h1>
+    
     
 </body>
 </html>
