create component header footer = js

--- a/signin.html
+++ b/signin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grocery Mart</title>
+    <title>SignIn | Grocery Mart</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="./asset/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="./asset/favicon/favicon.svg" />
@@ -20,15 +20,15 @@
     <!-- header -->
     <header id="header"></header>
     <script>
-        load("#header", "./template/header.html");
+        load("#header","./template/header.html");
     </script>
     <!-- main -->
-    <h1>Home page</h1>
-    <!-- footer -->
+     <h1>Sign in page</h1>
+     <!-- footer -->
     <footer id="footer"></footer>
     <script>
-        load("#footer", "./template/footer.html");
-    </script>   
+        load("#footer","./template/footer.html");
+    </script>    
     
 </body>
 </html>
