--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grocery Mart</title>
+    <title>Sigup | Grocery Mart</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="./asset/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="./asset/favicon/favicon.svg" />
@@ -23,7 +23,7 @@
         load("#header", "./template/header.html");
     </script>
     <!-- main -->
-    <h1>Home page</h1>
+    <h1>Sign up page</h1>
     <!-- footer -->
     <footer id="footer"></footer>
     <script>
