header html sass

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grocery Mart</title>
+    <title>Gorcery Mart</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="./asset/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="./asset/favicon/favicon.svg" />
@@ -17,6 +17,7 @@
      <script src="./asset/js/script.js"></script>
 </head>
 <body>
+    <div class="container">
     <!-- header -->
     <header id="header"></header>
     <script>
@@ -28,7 +29,8 @@
     <footer id="footer"></footer>
     <script>
         load("#footer", "./template/footer.html");
-    </script>   
+    </script> 
+    </div>  
     
 </body>
 </html>
