--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
      <script src="./asset/js/script.js"></script>
 </head>
 <body>
-    <div class="container">
     <!-- header -->
-    <header id="header"></header>
+    <header id="header" class="header"></header>
     <script>
         load("#header", "./template/header.html");
     </script>
+    <div class="container">
     <!-- main -->
     <h1>Home page</h1>
     <!-- footer -->
