--- a/signin.html
+++ b/signin.html
@@ -20,14 +20,14 @@
     <!-- header -->
     <header id="header"></header>
     <script>
-        load("#header","./template/header.html");
+        load("#header","./templates/header.html");
     </script>
     <!-- main -->
      <h1>Sign in page</h1>
      <!-- footer -->
     <footer id="footer"></footer>
     <script>
-        load("#footer","./template/footer.html");
+        load("#footer","./templates/footer.html");
     </script>    
     
 </body>
