--- a/index.html
+++ b/index.html
@@ -24,7 +24,22 @@
     </script>
     <div class="container">
     <!-- main -->
-    <h1>Home page</h1>
+    <!-- Slide Show -->
+     <div class="slideshow">
+        <div class="slideshow__inner">
+            <div class="slideshow__item">
+                <img src="./asset/img/slideshow/slide-show-1.png" alt="Slide show 1" class="slideshow__img"></div>
+            <div class="slideshow__item">
+                <img src="./asset/img/slideshow/slide-show-1.png" alt="Slide show 1" class="slideshow__img"></div>
+            <div class="slideshow__item">
+                <img src="./asset/img/slideshow/slide-show-1.png" alt="Slide show 1" class="slideshow__img"></div>
+        </div>
+        <div class="slideshow__page">
+            <span class="slideshow__num">1</span>
+            <span class="slideshow__slider"></span>
+            <span class="slideshow__num">5</span>
+        </div>
+     </div>
     <!-- footer -->
     <footer id="footer"></footer>
     <script>
