--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
      <div class="slideshow">
         <div class="slideshow__inner">
             <div class="slideshow__item">
-                <img src="./asset/img/slideshow/slide-show-1.png" alt="Slide show 1" class="slideshow__img"></div>
-            <div class="slideshow__item">
-                <img src="./asset/img/slideshow/slide-show-1.png" alt="Slide show 1" class="slideshow__img"></div>
-            <div class="slideshow__item">
-                <img src="./asset/img/slideshow/slide-show-1.png" alt="Slide show 1" class="slideshow__img"></div>
+                <a href="#!" class="slideshow__link">
+                    <picture>
+                        <source media="(max-width:767.98px)" type="image/webp" srcset="./asset/img/slideshow/slide-show-md-1.png">
+                        <img src="./asset/img/slideshow/slide-show-1.png" alt="Slide show 1" class="slideshow__img">    
+                    </picture>
+                </a>
+            </div>            
         </div>
         <div class="slideshow__page">
             <span class="slideshow__num">1</span>
