edit system grid screen

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <script>
         load("#header", "./templates/header.html");
     </script>
-    <div class="container">
+    <div class="container home">
     <!-- main -->
     <!-- Slide Show -->
+     <section class="home__container">
      <div class="slideshow">
         <div class="slideshow__inner">
             <div class="slideshow__item">
@@ -42,6 +43,16 @@
             <span class="slideshow__num">5</span>
         </div>
      </div>
+     </section>
+     <!-- Browse Categories -->
+     <section class="home__container">
+        <h2 class="home__heading">Browse Categories</h2>
+        <div class="row row-clos-3">
+        </div>
+     </section>
+     <!-- Browse Products -->
+     <section class="home__container">
+     </section>
     <!-- footer -->
     <footer id="footer"></footer>
     <script>
