--- a/index.html
+++ b/index.html
@@ -47,7 +47,39 @@
      <!-- Browse Categories -->
      <section class="home__container">
         <h2 class="home__heading">Browse Categories</h2>
-        <div class="row row-clos-3">
+        <div class="home__cate row row-clos-3 row-cols-md-1">
+            <!-- Category Item 1 -->
+             <div class="col">
+                <article class="cate-item">
+                    <img src="./asset/img/category-item/item-1.png" alt="" class="cate-item__thumb">
+                    <section class="cate-item__info">
+                        <h3 class="cate-item__title">$24 - $150</h3>
+                        <p class="cate-item__desc">New sumatra mandeling coffe blend</p>
+                    </section>
+                </article>
+             </div>
+             <!-- Category Item 2 -->
+             <div class="col">
+                <article class="cate-item">
+                    <img src="./asset/img/category-item/item-2.png" alt="" class="cate-item__thumb">
+                    <section class="cate-item__info">
+                        <h3 class="cate-item__title">$37 - $160</h3>
+                        <p class="cate-item__desc">Espresso arabica and robusta beans</p>
+                    </section>
+                </article>
+             </div>
+             <!-- Category Item 3 -->
+             <div class="col">
+                <article class="cate-item">
+                    <img src="./asset/img/category-item/item-3.png" alt="" class="cate-item__thumb">
+                    <section class="cate-item__info">
+                        <h3 class="cate-item__title">$32 - $160</h3>
+                        <p class="cate-item__desc">Lavazza top class whole bean coffee blend</p>
+                    </section>
+                </article>
+             </div>
+
+               
         </div>
      </section>
      <!-- Browse Products -->
