--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" class="dark" >
+<!-- <html lang="en" class="dark" > -->
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +26,7 @@
     <div class="container home">
     <!-- main -->
     <!-- Slide Show -->
-     <section class="home__container">
+     <div class="home__container">
      <div class="slideshow">
         <div class="slideshow__inner">
             <div class="slideshow__item">
@@ -43,40 +44,48 @@
             <span class="slideshow__num">5</span>
         </div>
      </div>
-     </section>
+     </div>
      <!-- Browse Categories -->
      <section class="home__container">
-        <h2 class="home__heading">Browse Categories</h2>
+        <div class="home__row">
+            <h2 class="home__heading">Browse Categories</h2>
+        </div>
         <div class="home__cate row row-clos-3 row-cols-md-1">
             <!-- Category Item 1 -->
              <div class="col">
-                <article class="cate-item">
-                    <img src="./asset/img/category-item/item-1.png" alt="" class="cate-item__thumb">
-                    <section class="cate-item__info">
-                        <h3 class="cate-item__title">$24 - $150</h3>
-                        <p class="cate-item__desc">New sumatra mandeling coffe blend</p>
-                    </section>
-                </article>
+                <a href="#!">
+                    <article class="cate-item">
+                        <img src="./asset/img/category-item/item-1.png" alt="" class="cate-item__thumb">
+                        <div class="cate-item__info">
+                            <h3 class="cate-item__title">$24 - $150</h3>
+                            <p class="cate-item__desc">New sumatra mandeling coffe blend</p>
+                        </div>
+                    </article>
+                </a>
              </div>
              <!-- Category Item 2 -->
              <div class="col">
-                <article class="cate-item">
-                    <img src="./asset/img/category-item/item-2.png" alt="" class="cate-item__thumb">
-                    <section class="cate-item__info">
-                        <h3 class="cate-item__title">$37 - $160</h3>
-                        <p class="cate-item__desc">Espresso arabica and robusta beans</p>
-                    </section>
-                </article>
+                <a href="#!">
+                    <article class="cate-item">
+                        <img src="./asset/img/category-item/item-2.png" alt="" class="cate-item__thumb">
+                        <div class="cate-item__info">
+                            <h3 class="cate-item__title">$37 - $160</h3>
+                            <p class="cate-item__desc">Espresso arabica and robusta beans</p>
+                        </div>
+                    </article>
+                </a>
              </div>
              <!-- Category Item 3 -->
              <div class="col">
-                <article class="cate-item">
-                    <img src="./asset/img/category-item/item-3.png" alt="" class="cate-item__thumb">
-                    <section class="cate-item__info">
-                        <h3 class="cate-item__title">$32 - $160</h3>
-                        <p class="cate-item__desc">Lavazza top class whole bean coffee blend</p>
-                    </section>
-                </article>
+                <a href="#!">
+                    <article class="cate-item">
+                        <img src="./asset/img/category-item/item-3.png" alt="" class="cate-item__thumb">
+                        <div class="cate-item__info">
+                            <h3 class="cate-item__title">$32 - $160</h3>
+                            <p class="cate-item__desc">Lavazza top class whole bean coffee blend</p>
+                        </div>
+                    </article>
+                </a>
              </div>
 
                
@@ -99,8 +108,9 @@
                         <a href="#!">
                             <img src="./asset/img/product-card/product-card-1.png" alt="" class="product-card__thumb">
                         </a>
-                        <button class="like-btn like-btn__liked product-card__like-btn icon">
-                            <img src="./asset/icons/heart.svg" alt="" class="like-btn__icons">
+                        <button class="like-btn like-btn__liked product-card__like-btn">
+                            <img src="./asset/icons/heart.svg" alt="" class="like-btn__icon icon">
+                            <img src="./asset/icons/heart-red.svg" alt="" class="like-btn__icon--liked">
                         </button>
                     </div>
                     <h3 class="product-card__title">
@@ -123,8 +133,9 @@
                         <a href="#!">
                             <img src="./asset/img/product-card/product-card-2.png" alt="" class="product-card__thumb">
                         </a>
-                        <button class="like-btn like-btn__liked product-card__like-btn icon">
-                            <img src="./asset/icons/heart.svg" alt="" class="like-btn__icons">
+                        <button class="like-btn like-btn__liked product-card__like-btn">
+                            <img src="./asset/icons/heart.svg" alt="" class="like-btn__icon icon">
+                            <img src="./asset/icons/heart-red.svg" alt="" class="like-btn__icon--liked">
                         </button>
                     </div>
                     <h3 class="product-card__title">
@@ -147,8 +158,9 @@
                         <a href="#!">
                             <img src="./asset/img/product-card/product-card-3.png" alt="" class="product-card__thumb">
                         </a>
-                        <button class="like-btn like-btn__liked product-card__like-btn icon">
-                            <img src="./asset/icons/heart.svg" alt="" class="like-btn__icons">
+                        <button class="like-btn like-btn__liked product-card__like-btn">
+                            <img src="./asset/icons/heart.svg" alt="" class="like-btn__icon icon">
+                            <img src="./asset/icons/heart-red.svg" alt="" class="like-btn__icon--liked">
                         </button>
                     </div>
                     <h3 class="product-card__title">
@@ -171,8 +183,9 @@
                         <a href="#!">
                             <img src="./asset/img/product-card/product-card-4.png" alt="" class="product-card__thumb">
                         </a>
-                        <button class="like-btn like-btn__liked product-card__like-btn icon">
-                            <img src="./asset/icons/heart.svg" alt="" class="like-btn__icons">
+                        <button class="like-btn product-card__like-btn ">
+                            <img src="./asset/icons/heart.svg" alt="" class="like-btn__icon icon">
+                            <img src="./asset/icons/heart-red.svg" alt="" class="like-btn__icon--liked">
                         </button>
                     </div>
                     <h3 class="product-card__title">
