--- a/index.html
+++ b/index.html
@@ -108,20 +108,20 @@
                             <div class="filter__col">
                                 <label for="" class="filter__form-label">Price</label>
                                 <div class="filter__form-group">
-                                    <div class="filter__form-slider"></div>
+                                    <div class="filter__form-slider" style="--min-value:10%; --max-value:60%"></div>
                                 </div>
                                 <div class="filter__form-group filter__form-group--inline">
                                     <div>
-                                        <label for="" class="filter__form-label filter__form-label-small">
+                                        <label for="" class="filter__form-label filter__form-label--small">
                                             Minimum
                                         </label>
-                                        <input type="text" class="filter__form-input" value="$30.00">
+                                        <input type="text" class="filter__form-input" value="$30.00" readonly>
                                     </div>
                                     <div>
-                                        <label for="" class="filter__form-label filter__form-label-small">
+                                        <label for="" class="filter__form-label filter__form-label--small">
                                             Maximum
                                         </label>
-                                        <input type="text" class="filter__form-input" value="$100.000">
+                                        <input type="text" class="filter__form-input" value="$100.000" readonly>
                                     </div>
                                 </div>
                             </div>
