--- a/index.html
+++ b/index.html
@@ -115,20 +115,62 @@
                                         <label for="" class="filter__form-label filter__form-label--small">
                                             Minimum
                                         </label>
-                                        <input type="text" class="filter__form-input" value="$30.00" readonly>
+                                        <div class="filter__form-text-input filter__form-text-input--small">
+                                            <input type="text" class="filter__form-input" value="$30.00">
+                                        </div>
                                     </div>
                                     <div>
                                         <label for="" class="filter__form-label filter__form-label--small">
                                             Maximum
                                         </label>
-                                        <input type="text" class="filter__form-input" value="$100.000" readonly>
+                                        <div class="filter__form-text-input filter__form-text-input--small">
+                                            <input type="text" class="filter__form-input" value="$100.00">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="filter__separate"></div>
                             <!-- Filter col 2 -->
-                            <div class="filter__col"></div>
+                            <div class="filter__col">
+                                <label for="" class="filter__form-label">Size/Weight</label>
+                                <div class="filter__form-group">
+                                    <div class="filter__form-select-wrap">
+                                        <div class="filter__form-select" style="--width: 158px">
+                                            500g
+                                            <img src="./asset/icons/select-arrow.svg" alt="" class="filter__form-select-arrow">
+                                        </div>
+                                        <div class="filter__form-select">
+                                            Gram
+                                            <img src="./asset/icons/select-arrow.svg" alt="" class="filter__form-select-arrow">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="filter__form-group">
+                                    <div class="filter__form-tags">
+                                        <button class="filter__form-tag">Small</button>
+                                        <button class="filter__form-tag">Medium</button>
+                                        <button class="filter__form-tag">Large</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="filter__separate"></div>
                             <!-- Filter column 3 -->
-                            <div class="filter__col"></div>
+                            <div class="filter__col">
+                                <label for="" class="filter__form-label">Brand</label>
+                                <div class="filter__form-group">
+                                    <div class="filter__form-text-input">
+                                        <input type="text" placeholder="Search brand name" class="filter__form-input">
+                                        <img src="./asset/icons/search.svg" alt="" class="filter__form-input-icon">
+                                    </div>
+                                </div>
+                                <div class="filter__form-group">
+                                    <div class="filter__form-tags">
+                                        <button class="filter__form-tag">Small</button>
+                                        <button class="filter__form-tag">Medium</button>
+                                        <button class="filter__form-tag">Large</button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </form>
                 </div>
