home page product filter button responsive

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <img src="./asset/icons/arrow-up.png" alt="" class="filter__arrow">
                     <h3 class="filter__heading">Filter</h3>
                     <form action="" class="filter__form">
-                        <div class="filter__row">
+                        <div class="filter__row filter__content">
                             <!-- Filter col 1 -->
                             <div class="filter__col">
                                 <label for="" class="filter__form-label">Price</label>
@@ -138,19 +138,19 @@
                                     <div class="filter__form-select-wrap">
                                         <div class="filter__form-select" style="--width: 158px">
                                             500g
-                                            <img src="./asset/icons/select-arrow.svg" alt="" class="filter__form-select-arrow">
+                                            <img src="./asset/icons/select-arrow.svg" alt="" class="filter__form-select-arrow icon">
                                         </div>
                                         <div class="filter__form-select">
                                             Gram
-                                            <img src="./asset/icons/select-arrow.svg" alt="" class="filter__form-select-arrow">
+                                            <img src="./asset/icons/select-arrow.svg" alt="" class="filter__form-select-arrow icon">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="filter__form-group">
                                     <div class="filter__form-tags">
-                                        <button class="filter__form-tag">Lavazza</button>
-                                        <button class="filter__form-tag">Nescafe</button>
-                                        <button class="filter__form-tag">Starbucks</button>
+                                        <button class="filter__form-tag">Small</button>
+                                        <button class="filter__form-tag">Medium</button>
+                                        <button class="filter__form-tag">Large</button>
                                     </div>
                                 </div>
                             </div>
@@ -161,14 +161,14 @@
                                 <div class="filter__form-group">
                                     <div class="filter__form-text-input">
                                         <input type="text" placeholder="Search brand name" class="filter__form-input">
-                                        <img src="./asset/icons/search.svg" alt="" class="filter__form-input-icon">
+                                        <img src="./asset/icons/search.svg" alt="" class="filter__form-input-icon icon">
                                     </div>
                                 </div>
                                 <div class="filter__form-group">
                                     <div class="filter__form-tags">
-                                        <button class="filter__form-tag">Small</button>
-                                        <button class="filter__form-tag">Medium</button>
-                                        <button class="filter__form-tag">Large</button>
+                                        <button class="filter__form-tag">Lavazza</button>
+                                        <button class="filter__form-tag">Nescafe</button>
+                                        <button class="filter__form-tag">Starbucks</button>
                                     </div>
                                 </div>
                             </div>
