add list footer

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </div>
      </section>
     <!-- footer -->
-    <footer id="footer"></footer>
+    <footer id="footer" class="footer"></footer>
     <script>
         load("#footer", "./templates/footer.html");
     </script> 
